--- a/src/companions.html
+++ b/src/companions.html
@@ -445,8 +445,8 @@
                                 <ul class="tm-articles-list uk-list" uk-margin="margin: uk-margin-top">
                                     <li>
                                         <article class="uk-article">
-                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
-                                                <div class="uk-width-auto@s">
+                                            <div class="uk-child-width-expand@s" uk-grid>
+                                                <div class="uk-width-1-4@s">
                                                     <div class="uk-padding uk-padding-remove-top uk-text-center">
                                                         <img src="images/avatar_137x137_1.png" alt=""
                                                              class="uk-border-circle">
@@ -477,88 +477,46 @@
                                                         </div>
                                                     </div>
 
-
-                                                    <div class="uk-child-width-expand" uk-grid></div>
-
-
-
-
-
-
-                                                    <p>В 1905 году проливные дожди и таяние снегов вызвали разлив реки
-                                                        Колорадо, в результате чего в одном из районов Калифорнии под
-                                                        названием Солтон Си образовалось большое искусственное озеро.
-                                                    </p>
-
-                                                    <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
+                                                    <div class="uk-child-width-1-3@s" uk-grid>
                                                         <div>
-                                                            <div class="tm-image-shadow">
-                                                                <img src="images/blog_img_1.jpg" alt=""
-                                                                     class="uk-width-1-1">
-                                                            </div>
+                                                            <div class="uk-text-little uk-text-muted uk-text-uppercase">Ищу:</div>
+                                                            <div>Мужчину</div>
                                                         </div>
                                                         <div>
-                                                            <div class="tm-image-shadow">
-                                                                <img src="images/blog_img_2.jpg" alt=""
-                                                                     class="uk-width-1-1">
-                                                            </div>
+                                                            <div class="uk-text-little uk-text-muted uk-text-uppercase">В возрасте:</div>
+                                                            <div>от 18 до 70 лет</div>
                                                         </div>
-
-                                                        <div class="uk-width-1-1">
-                                                            <div class="tm-article-footer">
-                                                                <div class="uk-text-center">
-                                                                    <a href="#"
-                                                                       class="tm-button-more uk-button uk-button-small uk-button-white">
-                                                                        Читать полностью
-                                                                        <i class="fa fa-angle-double-down"
-                                                                           aria-hidden="true"></i>
-                                                                    </a>
-                                                                </div>
-
-                                                                <div class="uk-child-width-1-2@s uk-child-width-auto@l uk-flex-middle uk-flex-between"
-                                                                     uk-grid>
-                                                                    <div class="uk-text-center uk-text-left@s">
-                                                                        <a href="#" class="uk-text-bold">
-                                                                            <i class="fa fa-comment"
-                                                                               aria-hidden="true"></i>
-                                                                            Добавить комментарий
-                                                                        </a>
-                                                                    </div>
-
-                                                                    <div>
-                                                                        <div class="uk-flex uk-flex-middle uk-flex-center uk-flex-right@s uk-grid-small uk-text-muted"
-                                                                             uk-grid>
-                                                                            <div>
-                                                                                <i class="fa fa-thumbs-o-up"
-                                                                                   aria-hidden="true"></i>
-                                                                                <span>4</span>
-                                                                            </div>
-                                                                            <div>
-                                                                                <i class="fa fa-eye"
-                                                                                   aria-hidden="true"></i>
-                                                                                <span>21</span>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-
-                                                                    <div>
-                                                                        <!--TODO поставить счетчик-->
-                                                                        <div class="uk-text-center uk-text-left@s">Тут
-                                                                            поставить счетчик
-                                                                        </div>
-                                                                    </div>
-
-                                                                    <div>
-                                                                        <div class="uk-text-muted uk-text-center uk-text-right@s">
-                                                                            <i class="fa fa-calendar"
-                                                                               aria-hidden="true"></i>
-                                                                            <span>21.03.2017 11:01</span>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
+                                                        <div>
+                                                            <div class="uk-text-little uk-text-muted uk-text-uppercase">Едем из:</div>
+                                                            <div>Москва</div>
                                                         </div>
                                                     </div>
+
+                                                    <div class="uk-child-width-expand@s" uk-grid>
+                                                        <div>
+                                                            <div class="uk-margin-small-bottom uk-text-little uk-text-muted uk-text-uppercase">Цели поездки:</div>
+                                                            <div class="uk-button-group">
+                                                                <button class="uk-button uk-button-small uk-button-default">Море и пляж</button>
+                                                                <button class="uk-button uk-button-small uk-button-default">Автобусные туры</button>
+                                                                <button class="uk-button uk-button-small uk-button-default">Мотоциклы</button>
+                                                            </div>
+                                                        </div>
+                                                        <div class="uk-width-1-3">
+                                                            <div class="uk-margin-small-bottom uk-text-little uk-text-muted uk-text-uppercase">Мои страницы</div>
+                                                            <ul class="tm-social uk-iconnav uk-flex-middle">
+                                                                <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                                                                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                                                <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                                                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="uk-padding-small uk-background-muted">
+
+                                                        <div class="uk-flex uk-flex-between"></div>
+                                                    </div>
+
                                                 </div>
                                             </div>
                                         </article>
