--- a/src/blogs.html
+++ b/src/blogs.html
@@ -225,11 +225,11 @@
 
                         <!--Tourist blogs-->
                         <div>
-                            <div class="uk-child-width-expand uk-flex-between uk-margin-bottom" uk-grid>
+                            <div class="uk-child-width-expand@s uk-flex-between uk-margin-bottom" uk-grid>
                                 <div>
                                     <h2>Блоги туристов</h2>
                                 </div>
-                                <div class="uk-width-auto">
+                                <div class="uk-width-auto@s">
                                     <div class="uk-flex-middle" uk-grid>
                                         <div>
                                             <div class="uk-text-little">Всего постов: <span class="uk-text-bold">563</span></div>
