--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -262,17 +262,15 @@
                                     <div>
                                         <div class="uk-margin">
                                             <label class="uk-form-label" for="form-input-age">В возрасте от</label>
-                                            <div class="uk-flex uk-flex-middle">
+                                            <div>
                                                 <div>
-                                                    <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                        <input class="uk-input" id="form-input-age" type="text">
-                                                    </div>
+                                                    <input class="uk-input uk-form-width-xsmall" id="form-input-age" type="text">
                                                 </div>
+                                                <div>до</div>
                                                 <div>
-                                                    <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                        <input class="uk-input" type="text">
-                                                    </div>
+                                                    <input class="uk-input uk-form-width-xsmall" type="text">
                                                 </div>
+                                                <div>лет</div>
                                             </div>
                                         </div>
                                     </div>
