--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -262,21 +262,43 @@
                                     <div>
                                         <div class="uk-margin">
                                             <label class="uk-form-label" for="form-input-age">В возрасте от</label>
-                                            <div>
+                                            <div class="uk-flex uk-flex-middle">
                                                 <div>
                                                     <input class="uk-input uk-form-width-xsmall" id="form-input-age" type="text">
                                                 </div>
-                                                <div>до</div>
+                                                <div class="uk-margin-small-left uk-margin-small-right">до</div>
                                                 <div>
                                                     <input class="uk-input uk-form-width-xsmall" type="text">
                                                 </div>
-                                                <div>лет</div>
+                                                <div class="uk-margin-small-left">лет</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
                                 <hr>
+
+                                <div class="uk-margin">
+
+                                    <label class="uk-form-label">Цель поездки  (Выберите до 3-х целей)</label>
+                                    <div class="uk-child-width-1-5 uk-flex uk-flex-wrap">
+                                        <div>
+                                            <div class="uk-form-controls">
+                                        <input class="uk-hidden" type="checkbox" id="form-checkbox-target"
+                                               name="form-checkbox-target">
+                                        <label for="form-checkbox-target"
+                                               class="">С фото</label>
+                                    </div>
+                                        </div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                        <div></div>
+                                    </div>
+
+                                </div>
+
+
 
 
                             </form>
