--- a/src/blogs.html
+++ b/src/blogs.html
@@ -345,8 +345,13 @@
                                                                     </div>
 
                                                                     <div>
-                                                                        <!--TODO поставить счетчик-->
-                                                                        <div class="uk-text-center uk-text-left@s">Тут поставить счетчик</div>
+                                                                        <div class="social-likes-wrapper"
+                                                                             data-url="http://shared-url-example.com/">
+                                                                            <div data-service="facebook" title="Share link on Facebook"></div>
+                                                                            <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                                            <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
+                                                                            <div data-service="twitter" title="Share link on Twitter"></div>
+                                                                        </div>
                                                                     </div>
 
                                                                     <div>
@@ -434,8 +439,13 @@
                                                                     </div>
 
                                                                     <div>
-                                                                        <!--TODO поставить счетчик-->
-                                                                        <div class="uk-text-center uk-text-left@s">Тут поставить счетчик</div>
+                                                                        <div class="social-likes-wrapper"
+                                                                             data-url="http://shared-url-example.com/">
+                                                                            <div data-service="facebook" title="Share link on Facebook"></div>
+                                                                            <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                                            <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
+                                                                            <div data-service="twitter" title="Share link on Twitter"></div>
+                                                                        </div>
                                                                     </div>
 
                                                                     <div>
@@ -523,8 +533,13 @@
                                                                     </div>
 
                                                                     <div>
-                                                                        <!--TODO поставить счетчик-->
-                                                                        <div class="uk-text-center uk-text-left@s">Тут поставить счетчик</div>
+                                                                        <div class="social-likes-wrapper"
+                                                                             data-url="http://shared-url-example.com/">
+                                                                            <div data-service="facebook" title="Share link on Facebook"></div>
+                                                                            <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                                            <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
+                                                                            <div data-service="twitter" title="Share link on Twitter"></div>
+                                                                        </div>
                                                                     </div>
 
                                                                     <div>
@@ -612,8 +627,13 @@
                                                                     </div>
 
                                                                     <div>
-                                                                        <!--TODO поставить счетчик-->
-                                                                        <div class="uk-text-center uk-text-left@s">Тут поставить счетчик</div>
+                                                                        <div class="social-likes-wrapper"
+                                                                             data-url="http://shared-url-example.com/">
+                                                                            <div data-service="facebook" title="Share link on Facebook"></div>
+                                                                            <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                                            <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
+                                                                            <div data-service="twitter" title="Share link on Twitter"></div>
+                                                                        </div>
                                                                     </div>
 
                                                                     <div>
@@ -701,8 +721,13 @@
                                                                     </div>
 
                                                                     <div>
-                                                                        <!--TODO поставить счетчик-->
-                                                                        <div class="uk-text-center uk-text-left@s">Тут поставить счетчик</div>
+                                                                        <div class="social-likes-wrapper"
+                                                                             data-url="http://shared-url-example.com/">
+                                                                            <div data-service="facebook" title="Share link on Facebook"></div>
+                                                                            <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                                            <div data-service="odnoklassniki" title="Share link on Odnoklassniki"></div>
+                                                                            <div data-service="twitter" title="Share link on Twitter"></div>
+                                                                        </div>
                                                                     </div>
 
                                                                     <div>
