companions add listing html desktop

--- a/src/companions.html
+++ b/src/companions.html
@@ -216,6 +216,8 @@
                 <div class="uk-section uk-section-large uk-position-relative uk-padding-remove-bottom">
                     <div class="uk-container uk-text-center">
                         <h1>Поиск попутчиков на отдых</h1>
+
+                        <!-- Search for travel companions (Pageheader) -->
                         <div class="uk-margin-xlarge-bottom">
                             <form action="/">
                                 <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
@@ -300,9 +302,9 @@
                                     </div>
                                     <div class="uk-width-expand uk-width-auto@l">
                                         <div class="uk-form-controls uk-inline uk-width-1-1">
-                                        <span class="uk-form-icon">
-                                            <i class="fa fa-search" aria-hidden="true"></i>
-                                        </span>
+                                            <span class="uk-form-icon">
+                                                <i class="fa fa-search" aria-hidden="true"></i>
+                                            </span>
 
                                             <input class="uk-input" type="search" placeholder="Поиск по тексту">
                                         </div>
