companions add listing html adaptive

--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -280,7 +280,7 @@
 
                                 <div class="uk-margin">
                                     <label class="uk-form-label">Цель поездки  (Выберите до 3-х целей)</label>
-                                    <div class="tm-checkbox-set uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-6@m uk-flex uk-flex-wrap">
+                                    <div class="tm-checkbox-set uk-child-width-1-3@s uk-child-width-1-6@l uk-flex uk-flex-wrap">
                                         <div class="uk-form-controls">
                                             <input class="uk-hidden" type="checkbox" id="form-checkbox-target-1"
                                                    name="form-checkbox-target">
@@ -463,7 +463,7 @@
                                 <div class="uk-form-horizontal uk-margin">
                                     <label class="uk-form-label" for="form-input-drive-from">Едем в страну</label>
                                     <div class="uk-form-controls uk-panel uk-panel-scrollable uk-text-little uk-background-default">
-                                        <div class="tm-checkbox-destination uk-column-1-2 uk-column-1-5@m">
+                                        <div class="tm-checkbox-destination uk-column-1-3@s uk-column-1-5@l">
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Все равно куда</label>
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Азербайджан</label>
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Армения</label>
@@ -510,18 +510,18 @@
 
                                 <hr>
                                 
-                                <div class="uk-child-width-1-2@m" uk-grid>
+                                <div class="uk-child-width-1-2@l" uk-grid>
                                     <div>
                                         <div class="uk-form-horizontal">
                                             <label class="uk-form-label" for="form-input-date">В период с</label>
                                             <div class="uk-form-controls">
-                                                <div class="uk-flex uk-flex-middle">
+                                                <div class="uk-flex uk-flex-wrap uk-flex-middle" uk-margin>
                                                     <div>
                                                         <input class="uk-input uk-form-width-small" id="form-input-date"
                                                                type="text" placeholder="24.07.2017"
                                                                datepicker>
                                                     </div>
-                                                    <div class="uk-margin-small-left uk-margin-small-right">по</div>
+                                                    <div class="uk-width-1-1 uk-width-auto@s uk-margin-small-left uk-margin-small-right">по</div>
                                                     <div>
                                                         <input class="uk-input uk-form-width-small" type="text"
                                                                placeholder="24.07.2017"
@@ -536,8 +536,8 @@
                                     </div>
 
                                     <div>
-                                        <div class="uk-flex uk-flex-middle">
-                                            <label class="uk-form-label uk-margin-small-right"
+                                        <div class="uk-flex uk-flex-wrap uk-flex-middle">
+                                            <label class="uk-form-label uk-width-1-1 uk-width-auto@m uk-margin-small-right"
                                                    for="form-input-duration">Продолжительность поездки</label>
                                             <div class="uk-form-controls">
                                                 <div class="uk-flex uk-flex-middle">
