--- a/src/companions-add-listings.html
+++ b/src/companions-add-listings.html
@@ -463,7 +463,7 @@
                                 <div class="uk-form-horizontal uk-margin">
                                     <label class="uk-form-label" for="form-input-drive-from">Едем в страну</label>
                                     <div class="uk-form-controls uk-panel uk-panel-scrollable uk-text-little uk-background-default">
-                                        <div class="tm-checkbox-destination uk-column-1-3@s uk-column-1-5@l">
+                                        <div class="uk-column-1-3@s uk-column-1-5@l">
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Все равно куда</label>
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Азербайджан</label>
                                             <label><input class="uk-checkbox uk-margin-small-right" type="checkbox">Армения</label>
