--- a/src/registration.html
+++ b/src/registration.html
@@ -228,7 +228,297 @@
                             <h2>Регистрация пользователя</h2>
 
                             <form action="/" class="uk-padding uk-background-muted">
-                                <div class=""></div>
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-login">Логин*:</label>
+                                        <div class="uk-text-little uk-text-muted">Логин используется для авторизации;
+                                            от 3 до 15 символов - цифры и/или английские буквы.
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <input class="uk-input" id="form-input-login" type="text">
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-email">Адрес e-mail*:</label>
+                                        <div class="uk-text-little uk-text-muted">Укажите реальный и действующий
+                                            e-mail адрес.
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <input class="uk-input" id="form-input-email" type="email">
+                                    </div>
+                                </div>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-email-confirm">Подтверждение e-mail*:</label>
+                                    </div>
+                                    <div>
+                                        <input class="uk-input" id="form-input-email-confirm" type="email">
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-password">Пароль*:</label>
+                                        <div class="uk-text-little uk-text-muted">Задайте пароль от 6 до 12 символов,
+                                            используя цифры (0-9) или английские буквы (a-z). Например: 1234as
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <input class="uk-input" id="form-input-password" type="password">
+                                    </div>
+                                </div>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-password-confirm">Подтверждение пароля*:</label>
+                                    </div>
+                                    <div>
+                                        <input class="uk-input" id="form-input-password-confirm" type="password">
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label">Ваш пол*:</label>
+                                    </div>
+                                    <div>
+                                        <div class="uk-column-1-2">
+                                            <label><input class="uk-radio uk-margin-small-right" type="radio" name="radio-gender">Мужской</label>
+                                            <label><input class="uk-radio uk-margin-small-right" type="radio" name="radio-gender">Женский</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-username">Имя*:</label>
+                                        <div class="uk-text-little uk-text-muted">Укажите ваше настоящее имя,
+                                            до 22 символов.
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <input class="uk-input" id="form-input-username" type="text">
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-select-birth">Дата рождения*:</label>
+                                    </div>
+                                    <div>
+                                        <div class="" uk-grid>
+                                            <div class="uk-width-expand">
+                                                <div class="uk-form-controls uk-inline uk-width-1-1">
+                                                    <span class="uk-form-icon uk-form-icon-flip">
+                                                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                                    </span>
+                                                    <select class="uk-select" id="form-select-birth">
+                                                        <option> </option>
+                                                        <option>1</option>
+                                                        <option>2</option>
+                                                        <option>3</option>
+                                                        <option>4</option>
+                                                        <option>5</option>
+                                                        <option>6</option>
+                                                        <option>7</option>
+                                                        <option>8</option>
+                                                        <option>9</option>
+                                                        <option>10</option>
+                                                        <option>11</option>
+                                                        <option>12</option>
+                                                        <option>13</option>
+                                                        <option>14</option>
+                                                        <option>15</option>
+                                                        <option>16</option>
+                                                        <option>17</option>
+                                                        <option>18</option>
+                                                        <option>19</option>
+                                                        <option>20</option>
+                                                        <option>21</option>
+                                                        <option>22</option>
+                                                        <option>23</option>
+                                                        <option>24</option>
+                                                        <option>25</option>
+                                                        <option>26</option>
+                                                        <option>27</option>
+                                                        <option>28</option>
+                                                        <option>29</option>
+                                                        <option>30</option>
+                                                        <option>31</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="uk-width-2-3 uk-width-2-5@s">
+                                                <div class="uk-form-controls uk-inline uk-width-1-1">
+                                                    <span class="uk-form-icon uk-form-icon-flip">
+                                                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                                    </span>
+                                                    <select class="uk-select" id="form-select-month">
+                                                        <option> </option>
+                                                        <option>январь</option>
+                                                        <option>февраль</option>
+                                                        <option>март</option>
+                                                        <option>апрель</option>
+                                                        <option>май</option>
+                                                        <option>июнь</option>
+                                                        <option>июль</option>
+                                                        <option>август</option>
+                                                        <option>сентябрь</option>
+                                                        <option>октябрь</option>
+                                                        <option>ноябрь</option>
+                                                        <option>декабрь</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="uk-width-1-3@s uk-form-width-small@m">
+                                                <div class="uk-form-controls uk-inline uk-width-1-1">
+                                                    <span class="uk-form-icon uk-form-icon-flip">
+                                                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                                    </span>
+                                                    <select class="uk-select" id="form-select-year">
+                                                        <option> </option>
+                                                        <option>1970</option>
+                                                        <option>1971</option>
+                                                        <option>1972</option>
+                                                        <option>1973</option>
+                                                        <option>1974</option>
+                                                        <option>1975</option>
+                                                        <option>1976</option>
+                                                        <option>1977</option>
+                                                        <option>1978</option>
+                                                        <option>1979</option>
+                                                        <option>1980</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-select-country">Страна*:</label>
+                                    </div>
+                                    <div>
+                                        <div class="uk-form-controls uk-inline uk-width-1-1">
+                                            <span class="uk-form-icon uk-form-icon-flip">
+                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                            </span>
+                                            <select class="uk-select" id="form-select-country">
+                                                <option></option>
+                                                <option>Абхазия</option>
+                                                <option>Австралия</option>
+                                                <option>Австрия</option>
+                                                <option>Азербайджан</option>
+                                                <option>Андорра</option>
+                                                <option>Аргентина</option>
+                                                <option>Армения</option>
+                                                <option>Багамы</option>
+                                                <option>Беларусь</option>
+                                                <option>Бельгия</option>
+                                                <option>Болгария</option>
+                                                <option>Бразилия</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-select-region">Регион*:</label>
+                                    </div>
+                                    <div>
+                                        <div class="uk-form-controls uk-inline uk-width-1-1">
+                                            <span class="uk-form-icon uk-form-icon-flip">
+                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                            </span>
+                                            <select class="uk-select" id="form-select-region">
+                                                <option></option>
+                                                <option>Регион 1</option>
+                                                <option>Регион 2</option>
+                                                <option>Регион 3</option>
+                                                <option>Регион 4</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-select-city">Город*:</label>
+                                    </div>
+                                    <div>
+                                        <div class="uk-form-controls uk-inline uk-width-1-1">
+                                            <span class="uk-form-icon uk-form-icon-flip">
+                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                            </span>
+                                            <select class="uk-select" id="form-select-city">
+                                                <option></option>
+                                                <option>Город 1</option>
+                                                <option>Город 2</option>
+                                                <option>Город 3</option>
+                                                <option>Город 4</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <label class="uk-form-label" for="form-input-captcha">Защита от автоматической регистрации</label>
+                                        <div class="uk-text-little uk-text-muted">Введите символы, изображенные
+                                            на картинке *:
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-child-width-expand" uk-grid>
+                                            <div class="uk-width-auto">
+                                                <div class="tm-captcha uk-background-default">Тут капча</div>
+                                            </div>
+                                            <div>
+                                                <input class="uk-input" id="form-input-captcha" type="text">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <hr>
+
+                                <div class="uk-child-width-expand uk-grid-large" uk-grid>
+                                    <div class="uk-width-1-3@s uk-width-1-2@l">
+                                        <div class="uk-text-little">Создавая аккаунт в Tourweek, вы соглашаетесь с нашим
+                                            <a href="#">Пользовательским соглашением</a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="uk-form-controls">
+                                            <a href="" class="uk-button uk-button-large uk-button-blue uk-width-1-1">Зарегистрироваться</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </form>
                         </div>
 
